# rl_2048

./: .gitignore  README.md  configure_cuda.sh  models.dvc  pyproject.toml  requirements.txt
.dvc/: config
models/: .gitignore  dqn.npz.dvc  dqn.pt  params.safetensors  params.safetensors.dvc
src/: agent.py  baseline_play.py  config.py  dqn_config.py  dqn_model.py  dqn_play.py  dqn_train.py  env.py  env_test.py  main.py  model.py  play.py  play_dqn.py  ppo_model.py  ppo_train.py  train.py  train_dqn.py  train_ppo.py
src/pkg/: agent.py  config.py  env.py  env_utils.py  model.py  models.py  ppo_lib.py  test_episodes.py  util.py
test/: env_test.py
