[project]
name = "rl-2048"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "absl-py>=2.3.0",
    "chex>=0.1.89",
    "dvc[gs]>=3.60.1",
    "flax>=0.10.6",
    "gymnasium>=1.1.1",
    "jax[cuda12]>=0.6.2",
    "ml-collections>=1.1.0",
    "numba>=0.61.2",
    "numpy>=2.1.3",
    "optax>=0.2.5",
    "pyqt5>=5.15.11",
    "pytest>=8.3.5",
]


[tool.black]
line-length = 100
target-version = ['py312']

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
