[project]
name = "rl-2048"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dvc[gs]>=3.60.1",
    "gymnasium>=1.1.1",
    "numba>=0.61.2",
    "numpy>=2.1.3",
    "pyqt5>=5.15.11",
    "pytest>=8.3.5",
    "rich>=14.0.0",
    "torch>=2.6.0",
    "torchrl>=0.8.1",
]


[tool.black]
line-length = 100
target-version = ['py312']

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
